# fewsats-mcp

./: README.md  pyproject.toml
src/fewsats_mcp/: server.py
