[project]
name = "fewsats-mcp"
version = "0.0.1"
description = "Fewsats MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fewsats>=0.0.14",
]

[project.scripts]
fewsats-mcp = "fewsats_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fewsats_mcp"]
